# impact-client-python

./: .commitlintrc  .coveragerc  .flake8  .gitignore  .readthedocs.yml  .releaserc  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE.md  Makefile  README.md  commitlint.config.js  docker.env  mypy.ini  pylintrc  pyproject.toml  pytest.ini  release.sh  setup.cfg
.devcontainer/: devcontainer.json
.secrets/: README.md  getuid.py
docs/: requirements.txt
docs/source/: api_keys.rst  authentication_with_modelon_impact.rst  choosing_a_model.rst  choosing_analysis_type.rst  conf.py  fmu_based_workflow.rst  help.rst  index.rst  install.rst  license.rst  logging_output_for_client.rst  modelon.impact.client.entities.interfaces.rst  modelon.impact.client.entities.rst  modelon.impact.client.experiment_definition.interfaces.rst  modelon.impact.client.experiment_definition.rst  modelon.impact.client.jupyterhub.rst  modelon.impact.client.operations.rst  modelon.impact.client.operations.workspace.rst  modelon.impact.client.rst  modelon.impact.client.sal.rst  modelon.impact.rst  modelon.rst  modules.rst  multi_execution_experiments.rst  muti_execution_experiments.rst  plotting_experiment_results.rst  quick_start.rst  reexecuting_updating_experiments.rst  removing_fmus_experiments.rst  setting_up_workspace.rst  setup.rst  setup_run_experiment.rst  sobol_space_coverage.rst  spelling_wordlist.txt  tutorial.rst  working_with_workspaces.rst
modelon/impact/client/: __init__.py  asserts.py  client.py  compilation_definition.py  configuration.py  credential_manager.py  entities.py  exceptions.py  experiment_definition.py  experiment_specification.py  operations.py  operators.py  options.py  published_workspace_client.py  request_utils.py
modelon/impact/client/entities/: __init__.py  _initialize_from.py  asserts.py  case.py  content.py  custom_artifact.py  custom_function.py  experiment.py  external_result.py  file_uri.py  log.py  model.py  model_executable.py  modeling.py  package.py  project.py  result.py  status.py  whitelist.py  workspace.py
modelon/impact/client/experiment_definition/: asserts.py  base.py  expansion.py  extension.py  fmu_based.py  model_based.py  modifiers.py  operators.py  util.py
modelon/impact/client/jupyterhub/: __init__.py  authorize.py  exceptions.py  sal.py
modelon/impact/client/operations/: __init__.py  base.py  case.py  case_result.py  content_import.py  custom_artifact.py  experiment.py  external_result.py  external_result_import.py  fmu_import.py  model_executable.py  orphan_cleanup.py  project_import.py  workspace.py
modelon/impact/client/sal/: context.py  custom_function.py  exceptions.py  experiment.py  export.py  exports.py  external_result.py  http.py  imports.py  model_executable.py  modeling.py  project.py  request.py  response.py  service.py  uri.py  users.py  whitelist.py  workspace.py  ws.py  ws_response.py
tests/: conftest.py
tests/files/: paths.py
tests/files/test_libraries/: Single.mo
tests/files/test_libraries/Dynamic/: BouncingBall.mo  package.mo  package.order
tests/files/test_results/: test_data.csv
tests/fixtures/vcr_cassettes/test_case/: TestCase.test_case.yaml  TestCase.test_case_execute_explicit_sync.yaml  TestCase.test_case_execute_implicit_sync.yaml  TestCase.test_case_execute_with_auto_sync.yaml  TestCase.test_case_get_variables.yaml  TestCase.test_case_import_result.yaml  (+12 more)
tests/impact/client/: conftest.py  fixtures.py  helpers.py  test___init__.py  test_client.py  test_compilation_definition.py  test_configuration.py  test_credential_manager.py  test_entities.py  test_experiment_definition.py  test_operations.py  test_options.py  test_published_ws_client.py  utils.py
(+166 files in other folders)
