[tool.poetry]
name = "modelon-impact-client"
packages = [
    { include = "modelon" },
]
version = "0.0.1"
description = "Client library for easy scripting against Modelon Impact"
readme = "README.md"
homepage = "https://www.modelon.com/modelon-impact"
repository = "https://github.com/modelon-community/impact-client-python"
documentation = "https://modelon-impact-client.readthedocs.io"
license = "BSD"
authors = [
    "WEP <impact@modelon.com>"
]
classifiers = [
    "Programming Language :: Python :: 3.7"
]
include = [
]
keywords = ["impact", "client", "API"]

[tool.poetry.dependencies]
python = "^3.7.0"
requests = "^2.23"
semantic_version = "^2.8.5"
types-requests = "^2.27.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "*"
mypy = "*"
pytest-watch = "^4.2.0"
black = "^19.10b0"
click = "^7.0"
requests_mock = "^1.8"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
sphinx-copybutton = "^0.5.1"
pytest-cov = "^2.12.1"
pylint = "^2.13.9"
