[tool.poetry]
name = "modelon-impact-client"
packages = [
    { include = "modelon" },
]
version = "0.0.1"
description = "Client library for easy scripting against Modelon Impact"
readme = "README.md"
homepage = "https://www.modelon.com/modelon-impact"
repository = "https://github.com/modelon-community/impact-client-python"
documentation = "https://modelon-impact-client.readthedocs.io"
license = "BSD"
authors = [
    "WEP <impact@modelon.com>"
]
classifiers = [
    "Programming Language :: Python :: 3.7"
]
include = [
]
keywords = ["impact", "client", "API"]

[tool.poetry.dependencies]
python = "^3.7.0"
requests = "^2.23"
semantic_version = "^2.8.5"
types-requests = "^2.27.30"
docformatter = {extras = ["tomli"], version = "^1.5.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "4.0.1"
mypy = "*"
pytest-watch = "^4.2.0"
black = "^22.10.0"
click = "^8.1.3"
requests_mock = "^1.10"
sphinx = "^4.0.0"
sphinx-rtd-theme = "^1.1.1"
sphinx-copybutton = "^0.5.1"
pytest-cov = "^4.0.0"
pylint = "^2.13.4"

[tool.docformatter]
recursive = true
blank = true