[tool.poetry]
name = "modelon-impact-client"
packages = [
    { include = "modelon" },
]
version = "0.0.1"
description = "Client library for easy scripting against Modelon Impact"
readme = "README.md"
homepage = "https://www.modelon.com/modelon-impact"
repository = "https://github.com/modelon-community/impact-client-python"
documentation = "https://modelon-impact-client.readthedocs.io"
license = "BSD"
authors = [
    "WEP <impact@modelon.com>"
]
classifiers = [
    "Programming Language :: Python :: 3.8"
]
include = [
]
keywords = ["impact", "client", "API"]

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.23"
semantic_version = "^2.8.5"
types-requests = "^2.27.30"
# Do not use urllib3 2.0, it only supports OpenSSL 1.1.1+, CentOS 7 have 1.0.2k-fips
urllib3 = "^1.26.15"
paho-mqtt = "<2.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
flake8 = "^5.0.4"
black = "^22.10.0"
pylint = "^2.15.5"
isort = "^5.12.0"
docformatter = {extras = ["tomli"], version = "^1.7.5"}
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
pytest-cov = "^4.0.0"
click = "^8.1.3"
toml = "^0.10.2"
requests_mock = "^1.10"
vcrpy = "^6.0.1"
pytest-vcr = "^1.0.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-copybutton = "^0.5.1"
sphinxcontrib-napoleon = "^0.7"
sphinxcontrib-spelling = "^7.7.0"
readthedocs-sphinx-search = "^0.3.1"
sphinx-autodoc-typehints = "^1.22"

[tool.docformatter]
recursive = true
blank = true
black = true

[tool.isort]
profile = "black"